--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -12,7 +12,7 @@
                 <ColumnDefinition Width="20" />
                 <ColumnDefinition Width="50" />
                 <ColumnDefinition Width="20" />
-                <ColumnDefinition Width="100" />
+                <ColumnDefinition Width="200" />
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="20" />
             </Grid.ColumnDefinitions>
@@ -30,15 +30,13 @@
                 <TextBox x:Name="DescriptionField" />
                 <Button Content="Add Task" Click="AddTask_Click" />
             </StackPanel>
-
             <ListView x:Name="TasksList" Grid.Row="1" Grid.Column="3">
                 <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <StackPanel>
-                            <TextBlock Text="{Binding Path=shortDescription}"/>
-                            <TextBlock Text="{Binding Path=id}"/>
-                            <Button x:Name="ToggleCompleted" Content="X" Click="Button_Click" Visibility="Hidden"></Button>
-                        </StackPanel>
+                    <DataTemplate> 
+                        <WrapPanel Background="LightGray">
+                            <Button x:Name="ToggleCompleted" DataContext="{Binding Task}" Content="X" Click="Button_Click" Visibility="Hidden" Margin="5"></Button>
+                            <TextBlock Text="{Binding Path=shortDescription}" Margin="5"/>
+                        </WrapPanel>
                         <DataTemplate.Triggers>
                             <DataTrigger Binding="{Binding Path=isCompleted}" Value="false">
                                 <Setter TargetName="ToggleCompleted" Property="Visibility" Value="Visible"/>
@@ -50,3 +48,4 @@
         </Grid>
     </Border>
 </Window>
+    
