--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -10,7 +10,7 @@
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="20" />
-                <ColumnDefinition Width="50" />
+                <ColumnDefinition Width="150" />
                 <ColumnDefinition Width="20" />
                 <ColumnDefinition Width="500" />
                 <ColumnDefinition Width="*" />
@@ -27,17 +27,19 @@
                 <RowDefinition Height="20" />
             </Grid.RowDefinitions>
             <StackPanel Grid.Row="1" Grid.Column="1">
-                <TextBox x:Name="DescriptionField" />
-                <Button Content="Add Task" Click="AddTask_Click" />
+                <TextBox x:Name="DescriptionField" Height="20" Margin="5" />
+                <Button Content="Add Task" Height="30" Click="AddTask_Click" Margin="5" />
             </StackPanel>
-            <ListView x:Name="TasksList" Grid.Row="1" Grid.Column="3" ItemsSource="{Binding}">
+            <ListView x:Name="TasksList" Grid.Row="1" Grid.Column="3" ItemsSource="{Binding}" Height="760" BorderThickness="0.8">
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <WrapPanel Background="LightGray">
-                            <Button x:Name="ToggleCompletedButton" Content="Done!" Click="ToggleCompleted_Click" Margin="5"/>
-                            <Button x:Name="DeleteTaskButton" Content="Delete!" Click="DeleteTask_Click" Margin="5"/>
-                            <TextBlock x:Name="TaskLabel" Text="{Binding Path=ShortDescription}" Margin="5"/>
-                        </WrapPanel>
+                        <Border BorderBrush="Silver" BorderThickness="1" CornerRadius="3">
+                            <WrapPanel Width="480">
+                                <Button x:Name="ToggleCompletedButton" Content="Done!" Click="ToggleCompleted_Click" Margin="5"/>
+                                <Button x:Name="DeleteTaskButton" Content="Delete!" Click="DeleteTask_Click" Margin="5"/>
+                                <TextBlock x:Name="TaskLabel" Text="{Binding Path=ShortDescription}" Margin="10,5,50,5"/>
+                            </WrapPanel>
+                        </Border>
                         <DataTemplate.Triggers>
                             <DataTrigger Binding="{Binding Path=IsCompleted}" Value="True">
                                 <Setter TargetName="TaskLabel" Property="TextDecorations" Value="Strikethrough"/>
