--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -54,31 +54,35 @@
             </Style.Triggers>
         </Style>
         <DataTemplate x:Key="taskTemplate">
-            <Border BorderBrush="Silver" BorderThickness="1" CornerRadius="3">
-                <WrapPanel Width="480">
+            <Border BorderBrush="Silver" BorderThickness="1" CornerRadius="3" Height="40" VerticalAlignment="Center">
+                <WrapPanel Width="480" Height="40">
                     <Button x:Name="ToggleCompletedButton" 
                             Content="Done!" 
                             Command="{Binding Source={StaticResource tasksDataSource}, Path=ToggleCompletedCommand}" 
                             CommandParameter="{Binding}" 
-                            Style="{StaticResource DefaultButtonStyle}"/>
+                            Style="{StaticResource DefaultButtonStyle}"
+                            Width="40" />
                     <Button x:Name="DeleteTaskButton" 
                             Content="Delete!" 
                             Command="{Binding Source={StaticResource tasksDataSource}, Path=DeleteTaskCommand}" 
                             CommandParameter="{Binding}" 
-                            Style="{StaticResource DefaultButtonStyle}"/>
+                            Style="{StaticResource DefaultButtonStyle}"
+                            Width="40" />
                     <Button x:Name="EditTaskButton" 
                             Content="Edit!" 
                             Command="{Binding Source={StaticResource tasksDataSource}, Path=EditTaskCommand}" 
                             CommandParameter="{Binding}" 
-                            Style="{StaticResource DefaultButtonStyle}"/>
+                            Style="{StaticResource DefaultButtonStyle}"
+                            Width="40" />
                     <Button x:Name="SaveTaskButton" 
                             Content="Save!"
                             Command="{Binding Source={StaticResource tasksDataSource}, Path=SaveTaskCommand}" 
                             CommandParameter="{Binding ElementName=TaskDescriptionEditBox}"
-                            Style="{StaticResource DefaultButtonStyle}" />
+                            Style="{StaticResource DefaultButtonStyle}" 
+                            Width="40" />
 
                     <TextBlock x:Name="TaskLabel" Text="{Binding Path=ShortDescription}" Margin="10,10,50,10" />
-                    <TextBox x:Name="TaskDescriptionEditBox" DataContext="{Binding}" Text="{Binding Path=ShortDescription}" Padding="3" Margin="10,10,50,10" />
+                    <TextBox x:Name="TaskDescriptionEditBox" DataContext="{Binding}" Text="{Binding Path=ShortDescription}" Padding="3" Margin="10,5,50,5" />
                 </WrapPanel>
             </Border>
             <DataTemplate.Triggers>
